Continuando as aulas
add alguns arquivos e a primeira aula

--- a/lecture_1.ipynb
+++ b/lecture_1.ipynb
@@ -48,14 +48,14 @@
    "source": [
     "## Supervised Learning\n",
     "\n",
-    "In this section we'll try to explain what means **supervised learning**. Imagine that you want to predict the price of a house using only living area as variable, i.e., given a price of some house you'll tell the respective house price with some rate of confidence.\n",
+    "In this section we'll try to explain what means **supervised learning**. Imagine that you want to predict the price of a house using only living area as variable, i.e., given an area of some house you'll tell the respective house price with some rate of confidence.\n",
     "\n",
     "### Some notations\n",
     "\n",
     "* $x^{(i)}$: to denote the i-th input variables, in this case, the _i-th_ area. These variables are also called input **features**.  \n",
-    "* $y^{(i)}$: the variable that we want to predict, i.e., output variable, also called **target**. In our case the target is the price.\n",
+    "* $y^{(i)}$: the variable that we want to predict, i.e., the output variable, also called **target**. In our case the target is the price.\n",
     "* $(x^{(i)},y^{(i)})$: is the **training example**.\n",
-    "* ${(x^{(i)},y^{(i)}); i=1,...,m}$: the **training dataset** that we'll use to learn$^{(1)}$.\n",
+    "* ${(x^{(i)},y^{(i)})\\;\\; \\forall i=1,...,m}$: the **training dataset** that we'll use to learn$^{(1)}$.\n",
     "* $\\mathcal{X}$: the space of input values. In this case $\\mathcal{X} = \\mathbb{R}$.\n",
     "* $\\mathcal{Y}$: the space of output values. In this case $\\mathcal{Y} = \\mathbb{R}$.\n",
     "\n",
@@ -1003,9 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4377,7 +4375,7 @@
    "id": ""
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4391,7 +4389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.15"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -4426,5 +4424,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
